tests/semantic/invalid/32_e_redefined_class.hulk
class Point(x:Number) { x:Number = x; }

class Point(y:Number) { y:Number = y; }
